<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
<item
    android:id="@+id/action_sort_name"
    android:orderInCategory="100"
    android:title="@string/sort_name"
    app:showAsAction="never" />
<item
    android:id="@+id/action_sort_price"
    android:orderInCategory="100"
    android:title="@string/sort_price"
    app:showAsAction="never" />
<item
    android:id="@+id/action_sort_quantity"
    android:orderInCategory="100"
    android:title="@string/sort_quantity"
    app:showAsAction="never" />

</menu>
