<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFF"
    android:layout_gravity="center"
    android:padding="25dp"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/message"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/message"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/bg_input_task"
            android:textColorHint="#B5B5B5"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/what_you_do"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/timeline"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/date"
            android:inputType="text"
            android:background="@drawable/bg_input_task"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="18sp"
            android:textColorHint="#B5B5B5"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/when_will"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="TextViewEdits" />
        <Button
            android:id="@+id/selectDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/select"/>

    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@drawable/bg_ui"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />




</LinearLayout>