<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/header_register"
            app:popupTheme="@style/CardView"
            tools:ignore="PrivateResource" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/image_sale"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:layout_height="200dp"
        android:src="@drawable/sale_big"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_below="@id/image_sale"
    android:layout_centerHorizontal="true"
    android:padding="25dp"
    tools:ignore="Overdraw">



        <TextView
            android:id="@+id/tv1"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/product_code"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/cod"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_task"
            android:textColorHint="#B5B5B5"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/hint_empty"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv2"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/name"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/bg_input_task"
            android:textColorHint="#B5B5B5"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_empty"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="" />
        <TextView
            android:id="@+id/tv3"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/quantity_title"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/quantity"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/bg_input_task"
            android:textColorHint="#B5B5B5"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/hint_empty"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/product_price"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_title" />

            <EditText
                android:id="@+id/price_edit"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_price"
                android:padding="10dp"
                android:background="@drawable/bg_input_task"
                tools:ignore="LabelFor"
                android:inputType="text"
                android:autofillHints="" />


            <TextView
                android:id="@+id/price_final"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/price_edit"
                android:layout_marginStart="30dp"
                android:text="@string/total" />
            <EditText
                android:id="@+id/total"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product_price"
                android:layout_marginStart="30dp"
                android:padding="10dp"
                android:layout_toEndOf="@id/price_edit"
                android:background="@drawable/bg_input_task"
                tools:ignore="LabelFor"
                android:inputType="text"
                android:autofillHints="" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/cancelButton"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/cancel"
                android:textColor="#FFF"
                android:textAllCaps="false"
                android:background="@drawable/bg_ui"
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/saleButton"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/menu_sales"
                android:layout_toEndOf="@id/cancelButton"
                android:textColor="#FFF"
                android:textAllCaps="false"
                android:background="@drawable/bg_ui"
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="40dp" />


        </RelativeLayout>



</LinearLayout>
</RelativeLayout>