<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.ContActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image_delete"
        android:fontFamily="casual"
        android:gravity="center"
        android:textColor="@color/blackTextColor"
        android:text="@string/delete_cont"
        android:textSize="20sp"
        android:visibility="visible"
        />
    <ImageView
        android:id="@+id/image_delete"
        android:layout_width="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:layout_height="100dp"
        android:src="@drawable/delete"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/empty"
        android:fontFamily="casual"
        android:gravity="center"
        android:textColor="@color/blackTextColor"
        android:text="@string/info"
        android:textSize="20sp"
        android:visibility="visible"
        />
    <TextView
        android:id="@+id/copy"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info"
        android:fontFamily="casual"
        android:gravity="center"
        android:textColor="@color/blackTextColor"
        android:text="@string/copy"
        android:textSize="20sp"
        android:visibility="visible"
        />

</RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>